--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,28 @@
 
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    //ext.kotlin_version = '1.3.50'
+    ext {
+        kotlin_version = '1.4.10'
+        compile_sdk_version = 29
+        build_tools_version = '29.0.3'
+        min_sdk_verion = 21
+        target_sdk_version = 29
+
+        lib_verion_code = 1
+        lib_verion_name = "1.0.0"
+        navigation_version = '2.3.1'
+    }
     repositories {
         google ()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0-beta01'
-        classpath"org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
     }
 }
 
