--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,6 +17,22 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
+
+        //生成schema文件，便于查看数据库创建表的详细信息
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation" : "$projectDir/schemas".toString()]
+                //ARouter需要配置
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
+        //kotlin ARouter 配置方式
+        kapt {
+            arguments {
+                arg("AROUTER_MODULE_NAME", project.getName())
+                arg("room.schemaLocation": "$projectDir/schemas".toString())
+            }
+        }
     }
 
     buildTypes {
@@ -49,6 +65,9 @@ android {
     dataBinding {
         enabled = true
     }
+/*    buildFeatutes{
+        dataBinding = true
+    }*/
 
     compileOptions {
         sourceCompatibility 1.8
@@ -128,6 +147,12 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //ARouter
+    implementation 'com.alibaba:arouter-api:1.5.0'
+    kapt 'com.alibaba:arouter-compiler:1.2.2'
+    //liveData eventBus
+    implementation 'com.jeremyliao:live-event-bus-x:1.7.2'
+
     //<editor-folder desc="test libs">
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.1'
@@ -142,5 +167,6 @@ dependencies {
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.8.0'
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9'
     //</editor-folder>
+
 
 }
