--- a/netdemo/build.gradle
+++ b/netdemo/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 //引用dependencies中的配置
 apply from: '../dependencies.gradle'
+apply plugin: 'kotlin-android'
 
 android {
     defaultConfig {
@@ -10,6 +11,9 @@ android {
 
 dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
